# harmonic_oscillator_animation

./: .gitignore  CLAUDE.md  README.md  claude_interview_prompt.txt  harmonic_oscillator_animation_prompt.txt  harmonic_oscillator_animation_run_summary.md  run.sh  setup_env.sh
.github/workflows/: ci.yml
harmonic_oscillator_animation/: environment.yml  pyproject.toml
harmonic_oscillator_animation/.github/workflows/: ci.yml
harmonic_oscillator_animation/src/harmonic_oscillator_animation/: __init__.py  app.py  main.py  physics.py  plot_widget.py  spring_renderer.py
harmonic_oscillator_animation/tests/: conftest.py
harmonic_oscillator_animation/tests/e2e/: test_app.py
harmonic_oscillator_animation/tests/integration/: test_widgets.py
harmonic_oscillator_animation/tests/unit/: test_physics.py
