[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic_oscillator_animation"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=harmonic_oscillator_animation --cov-report=term-missing --cov-fail-under=80"
